link_to、form_forの修正・画面調整

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -251,8 +251,12 @@ header.header {
   }
 
 .iconimage {
-      height: 50px;
-      width: 50px;
+      height: 40px;
+      width: 40px;
+}
+
+.form_label {
+  font-size: 30px;
 }
 
 .form {
