--- a/app/views/blogs/create.html.erb
+++ b/app/views/blogs/create.html.erb
@@ -3,6 +3,6 @@
     <h5>
       投稿完了
     </h5>
-    <a class="btn" href="/">HOMEへ戻る</a>
+    <%= link_to "HOMEへ戻る", "/", class: "btn" %>
   </div>
 </div>
