--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,9 +1,13 @@
 <div class="contents row">
-  <%= form_tag("/blogs/#{@blog.id}", method: :patch ) do %>
-    <h3>
-      編集
-    </h3>
-    <textarea cols="30" name="text" placeholder="テキストを入力" rows="10"><%= @blog.text %></textarea>
-    <input type="submit" value="送信">
-  <% end %>
+<%= form_for @blog do |f| %>
+
+  <div class="field">
+    <%= f.label :text, "編集", class: "form_label" %>
+    <%= f.text_area :text, cols: 30, rows: 10 %>
+  </div>
+  <div class="actions">
+    <%= f.submit "送信" %>
+  </div>
+
+<% end %>
 </div>
