--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       })();
     </script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -43,8 +43,7 @@
             <li class="iconimage"><%= image_tag current_user.user_image %></li>
             <li><a href="/users/<%= current_user.id %>"><%= current_user.nickname %></a></li>
             <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
-            <li><a href="/blogs/new">投稿する</a></li>
-
+            <li><%= link_to "投稿する", "/blogs/new" %></li>
           <% else %>
             <li><%= link_to "ログイン", new_user_session_path, class: 'post' %></li>
             <li><%= link_to "新規登録", new_user_registration_path, class: 'post' %></li>
