--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -82,7 +82,7 @@ line-height: 1.57;
 
 .message_box{
   float: left;
-  height: 100px;
+  min-height: 100px;
   width: 505px;
   padding: 9px 0 10px;
 }
